[package]
name = "experiment_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
holochain_types = { version = "0.2.2", features = ["chc"] }
serde_json = "1.0.108" # [This version of serde_json is used in hpos-api binary]